fixed scroll overflows

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,6 +1,6 @@
 html {
   scroll-snap-type: y proximity;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 body {
